force-app/main/default/objects/Outbound_Order_Line__c/Outbound_Order_Line__c.object-meta.xml
<CustomObject>
    <label>Outbound Order Line</label>
    <nameField>
        <displayFormat>OUTL-{00000}</displayFormat>
        <label>Outbound Order Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Order Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>