force-app/main/default/objects/Outbound_Order_Line__c/fields/Ordered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Ordered_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ordered Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>