force-app/main/default/objects/Outbound_Order_Line__c/fields/Outbound_Order__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Order</label>
    <referenceTo>Outbound_Order__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>