force-app/main/default/objects/Outbound_Order_Line__c/fields/Packed_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Packed_Quantity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Packed Quantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>