force-app/main/default/objects/Outbound_Order_Line__c/fields/Remaining_To_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Remaining_To_Allocate__c</fullName>
    <formula>Ordered_Quantity__c - Allocated_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining To Allocate</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>