force-app/main/default/objects/Outbound_Order_Line__c/fields/Remaining_To_Pick__c.field-meta.xml
<CustomField>
    <fullName>Remaining_To_Pick__c</fullName>
    <formula>Allocated_Quantity__c - Picked_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining To Pick</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>