force-app/main/default/objects/Outbound_Order_Line__c/validationRules/Ordered_Quantity_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Ordered_Quantity_Must_Be_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Ordered_Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Ordered quantity must be greater than zero.</errorMessage>
</ValidationRule>