force-app/main/default/objects/Outbound_Order_Line__c/validationRules/Quantities_Cannot_Exceed_Previous_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantities_Cannot_Exceed_Previous_Stage</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Allocated_Quantity__c > Ordered_Quantity__c, Picked_Quantity__c > Allocated_Quantity__c, Packed_Quantity__c > Picked_Quantity__c)</errorConditionFormula>
    <errorMessage>Allocated, picked, and packed quantities must follow the fulfillment sequence.</errorMessage>
</ValidationRule>